--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -12,7 +12,7 @@
 { endif }  --->
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id= G-2R1MBLLY54}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
