--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,10 @@
 
 <meta charset="utf-8">
 
+{% if site.google_analytics  %}
+{% include analytics.html %}
+{% endif %}
+
 {% include seo.html %}
 
 <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
@@ -15,9 +19,7 @@
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
 
-{% if site.google_analytics and jekyll.environment == 'production' %}
-{% include analytics.html %}
-{% endif %}
+
 
 
 <!-- For all browsers -->
