--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 
 {% if site.google_analytics  %}
-{% include analytics.html %}
+{% include 'analytics.html' %}
 {% endif %}
 
 {% include seo.html %}
