--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -18,5 +18,5 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ site.google_analytics }}');
+  gtag('config', '{{ google_analytics }}');
 </script>
