--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,4 +1,4 @@
-<!-- { if site.analytics.provider and page.analytics != false }
+{ if site.analytics.provider and page.analytics != false }
 
 { case site.analytics.provider}
 { when "google" }
@@ -9,10 +9,10 @@
   {% include /analytics-providers/custom.html %}
 { endcase }
 
-{ endif }  -->
+{ endif } 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ google_analytics }}"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id={{ google_analytics }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -20,3 +20,4 @@
 
   gtag('config', '{{ google_analytics }}');
 </script>
+ -->
