--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,15 +1,17 @@
-{ if site.analytics.provider and page.analytics != false }
+{% if jekyll.environment == 'production' and site.analytics.provider and page.analytics != false %}
 
-{ case site.analytics.provider}
-{ when "google" }
-  { include /analytics-providers/google.html }
+{% case site.analytics.provider %}
+{% when "google" %}
+  {% include /analytics-providers/google.html %}
 {% when "google-universal" %}
   {% include /analytics-providers/google-universal.html %}
+{% when "google-gtag" %}
+  {% include /analytics-providers/google-gtag.html %}
 {% when "custom" %}
   {% include /analytics-providers/custom.html %}
-{ endcase }
+{% endcase %}
 
-{ endif } 
+{% endif %}
 
 
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id={{ google_analytics }}"></script>
